# munggoggo

./: .bumpversion.cfg  .env  .envrc  .gitignore  LICENSE  Makefile  PingAgent.py  Pipfile  README.md  README.rst  README_DEV.md  VERSION  _pyproject.toml  agent1.py  agent2.py  agent_minimal.py  asgi.py  ctrl.py  historian.py  munggoggo.cast  ping_agent.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test_ctrl.py
docs/source/: agents.rst  asgi.rst  behaviour.rst  conf.py  core.rst  index.rst  messages.rst  tour.rst
frontend/: .gitignore  README.md  install_frontend.sh  package-lock.json  package.json
frontend/src/: Agent.js  AgentList.js  App.js  Behaviour.js  index.css  index.js  xxx.js
munggoggo/: .gitignore  README.md  __init__.py  agent.py  asgi_agent.py  base.py  behaviour.py  clocks.py  core.py  handler.py  historian.py  jsonrpc_endpoint.py  messages.py  model.py  monkeytype.sqlite3  periodic.py  settings.py  subsystem.py  trace.py  utils.py
munggoggo/static/: schema.yaml  xxx.html
munggoggo/tests/: agent_config.json  agent_config.yaml  conftest.py  pytest.ini  test_agent.py  test_asgi_agent.py  test_behaviour.py  test_client.http  test_clocks.py  test_core.py  test_handler.py  test_messages.py  test_mode.py  test_model.py  test_periodic.py  test_subsystem.py  test_trace.py  test_utils.py
rmq/: README.md  docker-compose.yaml  enabled_plugins  rabbitmq.conf
scripts/: ipy.py
static/: schema.yaml
static/frontend/: asset-manifest.json  index.html  manifest.json  precache-manifest.ccd6f4188355be0f05afb60472c80031.js  service-worker.js
(+15 files in other folders)
