[build-system]
requires = ["setuptools", "wheel"]

[tool.autohooks]
mode = "pythonpath"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[tool.autohooks.plugins.isort]
include = ['munggoggo/**/*.py']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80
